r2/r2/public/static/css/reddit.less
/* ... */
.comment.noncollapsed {
    .numchildren {
        display: none;
    }

    .usertext, .child, .buttons {
        display: block;
    }

    .midcol {
        visibility: visible;
    }
}

.comment.controversial > .entry .score:after {
  content: '†';
  position: relative;
  top: -2px;
}

.comment.collapsed {
    padding-bottom: 10px;

    .numchildren {
        display: inline;
    }

    .usertext, .child, .buttons {
        display: none;
    }

    .midcol {
        visibility: hidden;
        height: 1px;
    }

    .tagline, .tagline a {
        color: gray;

        :not(.expand) {
            font-style: italic;
        }
    }
}

.comment {
    .midcol {
        margin-left: 0px;
        width: 15px;
    }

    .title {
        font-size: small;
        margin-top: 10px;
    }

    .author {
        font-weight: bold;
    }

    .expand {
        margin-right: 3px;
        padding: 1px;
    }

    .child, .showreplies {
        margin-top: 10px; 
        margin-left: 15px; 
        border-left: 1px dotted #DDF;
    }
}

.comment .showreplies {
    display: block;
    margin-top: 7px;
    margin-bottom: 15px;
    padding: 5px;
}

textarea.gray { color: gray; }

.deepthread:after {
    background-image: url(../continue-thread.png);  /* SPRITE */
    content: " ";
    display: inline-block;
    width: 25px;
    height: 9px;
    margin: 5px 0 0 5px;
}

.deepthread a { font-size: larger; color: #336699 }
.deepthread a:hover { text-decoration: underline}

.morecomments {font-size: larger}
.morecomments a { color: #336699 }
.morecomments a:hover { text-decoration: underline}
.morecomments .gray {font-weight: normal; color: gray}

.expand-btn { 
    font-size: smaller;
    margin: 0px 5px;  
    margin-top: 4px; 
    display: inline-block; 
}

.message.noncollapsed {
    .numchildren {
        display: none;
    }

    .child, .buttons, .md {
        display: block;
    }

    .midcol {
        visibility: visible;
    }
}

.message.collapsed {
    > .entry {
        > .buttons, > .md {
            display: none;
        }   
    }

    .midcol {
        visibility: hidden;
        height: 20px;
    }
}

.message {
    margin: 10px 10px 20px 5px; 
    padding-left: 5px; 
    margin:10px 10px 20px 5px;
    padding:7px;
}

.message.focal > .entry .md { 
    background-color: #FFFFCC;
}

.message .collapsed .head { 
    color: #888888;
    font-style: italic;
}


.message.message-parent .tagline,
.message.message-reply .tagline  {
    color: #485;
}

.message.message-parent > .entry,
.message.message-reply  > .entry {
    color: #485;
}

.message.recipient > .entry {
    color: black;
}

.message.message-reply.recipient > .entry .head,
.message.message-parent.recipient > .entry .head { 
    color: black; 
    font-weight: bold;
}

.message.new > .entry .head {
  color:orangered; font-weight: bold;  
}
.message.new > .entry{ 
    background-color:#F7F7F7;
    border:1px solid #E9E9E9;
    padding: 6px;
}

.message.new .unread { 
    display: none; 
}


.message .child .message,
.message .child .usertext { 
    margin-top: 10px; 
    margin-left: 12px; 
}

.message.was-comment .child .message,
.message.was-comment .child .usertext { 
    margin-top: 0px;
    margin-left: 0px; 
}

.message .expand { 
    margin-right: 3px;
    display: none;
}

.message .entry { 
    margin-left: 0px; 
}

.message.message-parent .expand { 
    display: inline; 
}

/* threaded message styles: remove padding */
.message.message-parent .child,
.message.message-reply .child { 
    margin: 0;
    padding: 0; 
}

.message.message-parent .child .message,
.message.message-reply  .child .message
 { 
    margin: 0;
    padding: 0; 
}

.message.message-parent .subject { 
    margin-bottom: 10px; 
}

.message.message-parent .message .subject { 
    display: none; 
}

.message.message-reply .subject { 
    display:none;
}

.message.message-reply .entry, 
.message.message-parent .entry { 
    margin-left: 10px;
    padding-left: 10px;
    padding-bottom: 10px; 
    border-left: 2px dashed #E7E7E7;
}


.message .buttons,
.message .md { margin-left: 15px; }
.message .entry .parent { 
    border: 1px solid #336699; 
    max-width: 60em;
    margin: 3px 10px; 
}

.message .subject .correspondent {
    background-color:#EFF7FF;
    border:1px solid #336699;
    color:#336699;
    display:inline-block;
    margin-right:10px;
    padding:2px 5px; 
}

.message .subject .title { 
    font-weight: normal;
    font-style: italic;
    margin-left: 10px; 
}
.message .parent-link { 
    margin-left: 12px; 
    padding: 0 2px;
    font-weight: bold; 
}

.message.was-comment .midcol { margin-left: 0px;  }

.message.was-comment .buttons,
.message.was-comment .parent-link { 
    margin-left: 0px; }

.message.was-comment .md { 
    margin-left: 2px; 
 }


.message .subject { font-weight: bold; font-size: larger; }
/* ... */

